--- a/index.html
+++ b/index.html
@@ -30,13 +30,21 @@
             <ul class="button-list">
               <li>
                 <a href="list.html">
-                  بحث بالقائمة
+                  بحث 
+
+                  <span>
+                    بالقائمة
+                  </span>
                 </a>
               </li>
 
               <li>
                 <a href="map.html">
-                  بحث بالخريطة
+                  بحث 
+
+                  <span>
+                    بالخريطة
+                  </span>
                 </a>
               </li>
             </ul>
