--- a/map.html
+++ b/map.html
@@ -55,7 +55,7 @@
                 </div>
                 
                 <span class="primary">
-                  انضم ك 
+                  انضم كـ  
 
                   <span class="light">
                     اسرة
@@ -74,7 +74,7 @@
                 </div>
                 
                 <span class="primary">
-                  انضم ك 
+                  انضم كـ  
 
                   <span class="light">
                     مندوب
@@ -234,37 +234,18 @@
                     154 تقيم
                   </span>
   
-                  <ul class="list">
-                    <li>
-                      <a href="#" class="active">
-                        <img src="assets/images/star.svg" loading="lazy" alt="">
-                      </a>
-                    </li>
-  
-                    <li>
-                      <a href="#" class="active">
-                        <img src="assets/images/star.svg" loading="lazy" alt="">
-                      </a>
-                    </li>
-  
-                    <li>
-                      <a href="#" class="active">
-                        <img src="assets/images/star.svg" loading="lazy" alt="">
-                      </a>
-                    </li>
-  
-                    <li>
-                      <a href="#">
-                        <img src="assets/images/star.svg" loading="lazy" alt="">
-                      </a>
-                    </li>
-  
-                    <li>
-                      <a href="#">
-                        <img src="assets/images/star.svg" loading="lazy" alt="">
-                      </a>
-                    </li>
-                  </ul>
+                  <div class="rating">
+                    <input type="radio" name="star" id="star1" />
+                    <label for="star1"></label>
+                    <input type="radio" name="star" id="star2" />
+                    <label for="star2"></label>
+                    <input type="radio" name="star" id="star3" />
+                    <label for="star3"></label>
+                    <input type="radio" name="star" id="star4" />
+                    <label for="star4"></label>
+                    <input type="radio" name="star" id="star5" />
+                    <label for="star5"></label>
+                  </div>
                 </div>
               </div>
             </div>
