--- a/favorite.html
+++ b/favorite.html
@@ -171,7 +171,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
@@ -226,7 +226,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
@@ -281,7 +281,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
@@ -336,7 +336,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
