--- a/map.html
+++ b/map.html
@@ -129,19 +129,19 @@
           <div class="swiper swiper-header">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="assets/images/banner.webp" loading="lazy" alt="" />
+                <img src="assets/images/banner.jpg" loading="lazy" alt="" />
               </div>
   
               <div class="swiper-slide">
-                <img src="assets/images/banner.webp" loading="lazy" alt="" />
+                <img src="assets/images/banner.jpg" loading="lazy" alt="" />
               </div>
   
               <div class="swiper-slide">
-                <img src="assets/images/banner.webp" loading="lazy" alt="" />
+                <img src="assets/images/banner.jpg" loading="lazy" alt="" />
               </div>
   
               <div class="swiper-slide">
-                <img src="assets/images/banner.webp" loading="lazy" alt="" />
+                <img src="assets/images/banner.jpg" loading="lazy" alt="" />
               </div>
             </div>
   
@@ -227,7 +227,7 @@
               </div>
   
               <div class="image-content">
-                <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+                <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
   
                 <div class="rate">
                   <span>
@@ -235,16 +235,11 @@
                   </span>
   
                   <div class="rating">
-                    <input type="radio" name="star" id="star1" />
-                    <label for="star1"></label>
-                    <input type="radio" name="star" id="star2" />
-                    <label for="star2"></label>
-                    <input type="radio" name="star" id="star3" />
-                    <label for="star3"></label>
-                    <input type="radio" name="star" id="star4" />
-                    <label for="star4"></label>
-                    <input type="radio" name="star" id="star5" />
-                    <label for="star5"></label>
+                    <input type="radio" name="rating1" />
+                    <input type="radio" name="rating1" />
+                    <input type="radio" name="rating1" />
+                    <input type="radio" name="rating1" />
+                    <input type="radio" name="rating1" />
                   </div>
                 </div>
               </div>
