--- a/list.html
+++ b/list.html
@@ -129,19 +129,19 @@
           <div class="swiper swiper-header">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="assets/images/banner.webp" loading="lazy" alt="" />
+                <img src="assets/images/banner.jpg" loading="lazy" alt="" />
               </div>
   
               <div class="swiper-slide">
-                <img src="assets/images/banner.webp" loading="lazy" alt="" />
+                <img src="assets/images/banner.jpg" loading="lazy" alt="" />
               </div>
   
               <div class="swiper-slide">
-                <img src="assets/images/banner.webp" loading="lazy" alt="" />
+                <img src="assets/images/banner.jpg" loading="lazy" alt="" />
               </div>
   
               <div class="swiper-slide">
-                <img src="assets/images/banner.webp" loading="lazy" alt="" />
+                <img src="assets/images/banner.jpg" loading="lazy" alt="" />
               </div>
             </div>
   
@@ -224,7 +224,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
@@ -279,7 +279,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
@@ -334,7 +334,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
@@ -389,7 +389,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
@@ -444,7 +444,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
@@ -499,7 +499,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
@@ -554,7 +554,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
@@ -609,7 +609,7 @@
             </div>
 
             <div class="image-content">
-              <img src="assets/images/banner.webp" class="product-img" loading="lazy" alt="" />
+              <img src="assets/images/banner.jpg" class="product-img" loading="lazy" alt="" />
 
               <div class="rate">
                 <span>
