--- a/list.html
+++ b/list.html
@@ -108,7 +108,7 @@
               <a href="#" type="button" data-toggle="modal" data-target="#contactModal">
                 <div class="image-content">
                   <img
-                    src="assets/images/user.svg"
+                    src="assets/images/sms.svg"
                     loading="lazy"
                     alt="" />
                 </div>
