--- a/favorite.html
+++ b/favorite.html
@@ -25,7 +25,7 @@
               alt="" />
           </a>
 
-          <a href="#" class="login-user" type="button" data-toggle="modal" data-target="#loginModal">
+          <a href="#" class="login-user" data-toggle="modal" data-target="#loginModal">
             <span>
               تسجيل دخول
             </span>
@@ -46,7 +46,7 @@
         <div class="contain">
           <ul class="bottom-nav-list">
             <li>
-              <a href="#" type="button" data-toggle="modal" data-target="#joinModal">
+              <a href="#" data-toggle="modal" data-target="#joinModal">
                 <div class="image-content">
                   <img
                     src="assets/images/plus.svg"
@@ -65,7 +65,7 @@
             </li>
 
             <li>
-              <a href="#" type="button" data-toggle="modal" data-target="#senderLoginModal">
+              <a href="#" data-toggle="modal" data-target="#senderLoginModal">
                 <div class="image-content">
                   <img
                     src="assets/images/plus.svg"
@@ -105,7 +105,7 @@
             </li>
 
             <li>
-              <a href="#" type="button" data-toggle="modal" data-target="#contactModal">
+              <a href="#" data-toggle="modal" data-target="#contactModal">
                 <div class="image-content">
                   <img
                     src="assets/images/sms.svg"
@@ -542,11 +542,11 @@
                 </a>
               </div>
 
-              <a href="#" class="forget-link link" data-dismiss="modal" type="button" data-toggle="modal" data-target="#forgetModal">
+              <a href="#" class="forget-link link" data-dismiss="modal" data-toggle="modal" data-target="#forgetModal">
                 هل نسيت كلمة المرور ؟
               </a>
 
-              <a href="#" class="link new-account" data-dismiss="modal" type="button" data-toggle="modal" data-target="#newAccountModal">
+              <a href="#" class="link new-account" data-dismiss="modal" data-toggle="modal" data-target="#newAccountModal">
                 انشاء حساب جديد
               </a>
             </form>
@@ -579,7 +579,7 @@
               </div>
 
               <div class="button-contain">
-                <a href="#" class="custom-btn" data-dismiss="modal" type="button" data-toggle="modal" data-target="#newPasswordModal">
+                <a href="#" class="custom-btn" data-dismiss="modal" data-toggle="modal" data-target="#newPasswordModal">
                   <span>
                     ارسال 
                   </span>
@@ -645,7 +645,7 @@
               </div>
 
               <div class="button-contain">
-                <a href="#" class="custom-btn" data-dismiss="modal" type="button" data-toggle="modal" data-target="#loginModal">
+                <a href="#" class="custom-btn" data-dismiss="modal" data-toggle="modal" data-target="#loginModal">
                   <span>
                     تسجيل 
                   </span>
@@ -691,7 +691,7 @@
               </div>
               
               <div class="button-contain">
-                <a href="#" class="custom-btn" data-dismiss="modal" type="button" data-toggle="modal" data-target="#loginModal">
+                <a href="#" class="custom-btn" data-dismiss="modal" data-toggle="modal" data-target="#loginModal">
                   <span>
                     تاكيد 
                   </span>
